# JSLab

./: .gitignore  AGENTS.md  LICENSE  README.md  package.json
astrobox-plugin/: Cargo.toml  manifest.json
astrobox-plugin/src/: lib.rs  resources.rs  ui.rs
src/: app.ux  manifest.json
src/components/InputMethod/: InputMethod.ux
src/pages/about/: about.ux
src/pages/add/: add.ux
src/pages/confirm/: confirm.ux
src/pages/edit/: edit.ux
src/pages/help/: help.ux
src/pages/index/: index.ux
src/pages/market/: market.ux
src/pages/money/: money.ux
src/pages/number-input/: number-input.ux
src/pages/run/: run.ux
src/pages/select/: select.ux
src/pages/setting/: setting.ux
src/utils/: configManager.js  jsManager.js
