[package]
name = "astrobox-jslab-plugin"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
astrobox-ng-wit = "0.2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
waki = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
